--- a/css/archive.css
+++ b/css/archive.css
@@ -5,7 +5,7 @@
 .diary_main {
   width: 90%;
   text-align: center;
-  margin: 30px auto 25px;
+  margin: 30px auto 48px;
   border-bottom: solid 1px #E7E7E7;
 }
 
@@ -126,20 +126,20 @@
   }
 }
 
-/*  ページネーション  */
+/*------------------------------------ ページネーション --------------------------------------*/
 
 .wp-pagenavi {
   width: 90%;
   text-align: center;
-  margin: 0 auto 96px;
-  font: normal normal normal 14px/29px Noto Sans CJK JP;
+  margin: 0 auto 48px;
+  font: normal normal normal 14px/29px Noto Sans CJK JP, sans-serif;
   color: #333333;
 }
 
 @media (min-width:770px) {
   .wp-pagenavi {
-    width: 80%;
-    font: normal normal normal 20px/29px Noto Sans CJK JP;
+    margin: 0 auto 96px;
+    font: normal normal normal 20px/29px Noto Sans CJK JP, sans-serif;
   }
 }
 
@@ -148,22 +148,26 @@
 }
 
 .page, .extend {
-  /* margin-right: 10%; */
   border: none;
   padding: 0;
+  margin: 0 30px 0 0;
 }
 
 @media (min-width:770px) {
   .page, .extend {
-    border: none;
+    margin: 0 60px 0 0;
+  }
+}
+
+@media (min-width:1050px) {
+  .page, .extend {
     margin: 0 80px 0 0;
-    padding: 0;
   }
 }
 
 .current {
   border: none;
-  margin-right: 10%;
+  margin: 0 30px 0 0;
   padding: 12px 21px 14px;
   background-color: #3D3D3D;
   color: #FFFFFF;
@@ -172,6 +176,12 @@
 }
 
 @media (min-width:770px) {
+  .current {
+    margin: 0 60px 0 0;
+  }
+}
+
+@media (min-width:1050px) {
   .current {
     margin: 0 80px 0 0;
   }
@@ -186,25 +196,37 @@
 .previouspostslink {
   border: none;
   font-size: 20px;
+  margin-right: 30px;
 }
 
 @media (min-width:770px) {
   .previouspostslink {
     font-size: 28px;
-    margin-right: 10%;
+    margin-right: 100px;
+  }
+}
+
+@media (min-width:1050px) {
+  .previouspostslink {
+    margin-right: 160px;
   }
 }
 
 .nextpostslink {
   border: none;
   font-size: 20px;
-  margin-left: 10%;
+  margin-left: 0;
 }
 
 @media (min-width:770px) {
   .nextpostslink {
-    border: none;
     font-size: 28px;
+    margin-left: 20px;
+  }
+}
+
+@media (min-width:1050px) {
+  .nextpostslink {
     margin-left: 80px;
   }
 }
