--- a/css/contact.css
+++ b/css/contact.css
@@ -3,7 +3,7 @@
 .contact_title h2 {
   text-align: center;
   margin: 91px 0 73px;
-  font: normal normal bold 28px/40px Noto Sans CJK JP;
+  font: normal normal bold 28px/40px Noto Sans CJK JP, sans-serif;
   color: #2E2E2E;
 }
 
@@ -14,19 +14,19 @@
 
 .contact_form h3 {
   text-align: center;
-font: normal normal bold 22px/32px Noto Sans CJK JP;
+font: normal normal bold 22px/32px Noto Sans CJK JP, sans-serif
 color: #FF5555;
 }
 
 .notice {
   text-align: left;
-  font: normal normal 300 14px/20px Noto Sans CJK JP;
+  font: normal normal 300 14px/20px Noto Sans CJK JP, sans-serif;
   color: #2E2E2E;
 }
 
 .notice span {
   text-align: left;
-  font: normal normal medium 20px/20px Noto Sans CJK JP;
+  font: normal normal medium 20px/20px Noto Sans CJK JP, sans-serif;
   color: #B02020;
 }
 
