--- a/css/contact.css
+++ b/css/contact.css
@@ -2,26 +2,75 @@
 
 .contact_title h2 {
   text-align: center;
-  margin: 91px 0 73px;
-  font: normal normal bold 28px/40px Noto Sans CJK JP, sans-serif;
+  margin: 40px 0 20px;
+  font: normal normal bold 20px Noto Sans CJK JP, sans-serif;
   color: #2E2E2E;
 }
 
-.contact_form {
-  width: 980px;
+@media (min-width:770px) {
+  .contact_title h2 {
+    margin: 80px 0 60px;
+    font-size: 28px;
+  }
+}
+
+@media (min-width:1050px) {
+  .contact_title h2 {
+    margin: 91px 0 73px;
+  }
+}
+
+.contact_subtitle {
+  width: 80%;
   margin: 0 auto;
 }
 
-.contact_form h3 {
+@media (min-width:770px) {
+  .contact_subtitle {
+    width: 600px;
+  }
+}
+
+@media (min-width:1050px) {
+  .contact_subtitle {
+    width: 980px;
+  }
+}
+
+.contact_subtitle h3 {
   text-align: center;
-font: normal normal bold 22px/32px Noto Sans CJK JP, sans-serif
-color: #FF5555;
+  font: normal normal bold 18px Noto Sans CJK JP, sans-serif;
+  color: #FF5555;
+  margin-bottom: 10px;
+}
+
+@media (min-width:770px) {
+  .contact_subtitle h3 {
+    font-size: 22px;
+  }
+}
+
+@media (min-width:1050px) {
+  .contact_subtitle h3 {
+    margin-bottom: 0;
+  }
+}
+
+.customer h3 {
+  margin-bottom: 14px;
+}
+
+@media (min-width:770px) {
+  .customer h3 {
+    margin-bottom: 28px;
+  }
 }
 
 .notice {
   text-align: left;
   font: normal normal 300 14px/20px Noto Sans CJK JP, sans-serif;
   color: #2E2E2E;
+  white-space: nowrap;
 }
 
 .notice span {
@@ -30,18 +79,385 @@ color: #FF5555;
   color: #B02020;
 }
 
-.company_informatino {
-  margin-top: 50px;
+.asterisk {
+  font: normal normal bold 20px/32px Noto Sans CJK JP, sans-serif;
+  color: #B02020;
+  margin-left: 5px;
+}
+
+/*------------------------------------ 問い合わせフォーム --------------------------------------*/
+
+.contact_form {
+  width: 80%;
+  margin: 9px auto 28px;
+  border: 1px solid #A5A5A5;
 }
 
 @media (min-width:770px) {
-  .company_informatino {
-    margin-top: 70px;
+  .contact_form {
+    width: 600px;
   }
 }
 
 @media (min-width:1050px) {
-  .company_informatino {
-    margin-top: 97px;
+  .contact_form {
+    width: 980px;
+  }
+}
+
+.contact_form li {
+  display: flex;
+}
+
+.contact_form li:not(:last-child) {
+  border-bottom: 1px solid #A5A5A5;
+}
+
+.contact_form_title {
+  width: 35%;
+  background-color: #E7E7E7;
+  font: normal normal bold 12px Noto Sans CJK JP, sans-serif;
+  padding: 15px 10px;
+  display: flex;
+  align-items: center;
+}
+
+@media (min-width:770px) {
+  .contact_form_title {
+    font-size: 15px;
+    width: 246px;
+    padding: 27px 24px;
+  }
+}
+
+@media (min-width:1050px) {
+  .contact_form_title {
+    font-size: 18px;
+  }
+  .contact_form_title br {
+    display: none;
+  }
+}
+
+/* 現在依頼中の不動産 */
+.small_title {
+  font-size: 10px;
+}
+
+@media (min-width:770px) {
+  .small_title {
+    font-size: 15px;
+  }
+}
+
+@media (min-width:1050px) {
+  .small_title {
+    font-size: 16px;
+  }
+  .small_title br {
+    display: none;
+  }
+}
+
+.contact_form_items {
+  width: 80%;
+  margin: 10px 20px;
+}
+
+@media (min-width:770px) {
+  .contact_form_items {
+    width: 733px;
+    margin: 27px 52px;
+  }
+}
+
+.mwform-radio-field-text {
+  font: normal normal normal 12px Noto Sans CJK JP, sans-serif;
+}
+
+@media (min-width:770px) {
+  .mwform-radio-field-text {
+ font-size: 16px;
+  }
+}
+
+.mwform-radio-field {
+  display: inline-block;
+  margin: 0!important;
+  margin-bottom: 10px!important;
+}
+
+.form1 .mwform-radio-field {
+  width: 80%;
+}
+
+.form2 .mwform-radio-field {
+  width: 80%;
+}
+
+.form1, .form2 {
+  margin-bottom: 0px;
+}
+
+@media (min-width:770px) {
+  .form1 .mwform-radio-field {
+    width: 300px;
+  }
+  .form2 .mwform-radio-field {
+    width: 150px;
+    margin-bottom: 19px!important;
+  }
+  .form1, .form2 {
+    margin-bottom: 8px;
+  }
+}
+
+
+/* 物件所在地 */
+.input_text {
+  font: normal normal normal 14px Noto Sans CJK JP, sans-serif;
+  width: 100%;
+  height: 26px;
+}
+
+@media (min-width:770px) {
+  .input_text {
+    width: 350px;
+    height: 42px;
+    font-size: 16px; 
+  }
+}
+
+@media (min-width:1050px) {
+  .input_text {
+    width: 632px;
+  }
+}
+
+/* 内容 */
+.form_content {
+  width: 100%;
+  height: 200px;
+  font: normal normal normal 16px Noto Sans CJK JP, sans-serif;
+}
+
+@media (min-width:770px) {
+  .form_content {
+    font-size: 16px;
+    width: 350px;
+    height: 248px;
+  }
+}
+
+@media (min-width:1050px) {
+  .form_content {
+    width: 632px;
+  }
+}
+
+/* お客様情報 */
+.user_form {
+margin: 20px 20px;
+}
+
+@media (min-width:770px) {
+  .user_form {
+    margin: 52px 27px;;
+  }
+}
+
+
+/*------------------------------------ 個人情報について --------------------------------------*/
+.check_privacy {
+  margin-top: 55px;
+  text-align: center;
+}
+
+.check_privacy h3 {
+  font: normal normal normal 16px/26px Noto Sans CJK JP, sans-serif;
+  margin-bottom: 15px;
+}
+
+.check_privacy p {
+  width: 70%;
+  text-align: left;
+  margin: 0 auto 14px;
+  font: normal normal normal 12px Noto Sans CJK JP, sans-serif;
+  color: #2E2E2E;
+}
+
+@media (min-width:770px) {
+  .check_privacy p {
+    width: 500px;
+    font-size: 14px;
+  }
+  .check_privacy h3 {
+    font-size: 18px;
+    margin-bottom: 26px;
+  }
+}
+
+@media (min-width:1050px) {
+  .check_privacy p {
+    width: 770px;
+  }
+}
+
+.check_privacy_content {
+  margin: auto;
+  width: 80%;
+  height: 266px;
+  background-color: #FCFCFC;
+  overflow-y: scroll;
+  border: 1px solid #AEAEAE;
+}
+
+@media (min-width:770px) {
+  .check_privacy_content {
+    width: 500px;
+  }
+}
+
+@media (min-width:1050px) {
+  .check_privacy_content {
+    width: 780px;
+  }
+}
+
+.check_privacy_content div {
+  margin: 24px 0 0 22px;
+}
+
+.check_privacy_content h1 {
+  text-align: left;
+  font: normal normal bold 14px Noto Sans CJK JP, sans-serif;
+  letter-spacing: 0.8px;
+  color: #2E2E2E;
+}
+
+.check_privacy_content p {
+  margin-top: 8px;
+  width: 90%;
+  text-align: left;
+  font: normal normal normal 12px Noto Sans CJK JP, sans-serif;
+  letter-spacing: 0.7px;
+  color: #2E2E2E;
+}
+
+@media (min-width:770px) {
+  .check_privacy_content p {
+    width: 430px;
+    font-size: 14px;
+    line-height: 28px;
+    margin-top: 13px;
+  }
+  .check_privacy_content h1 {
+  font-size: 16px;
+  line-height: 32px;
+  }
+}
+
+@media (min-width:1050px) {
+  .check_privacy_content p {
+    width: 713px;
+  }
+}
+
+.privacy_check {
+  width: 307px;
+  margin: 40px auto 0;
+}
+
+/* @media (min-width:770px) {
+.privacy_check {
+  width: 307px;
+
+  }
+}
+
+@media (min-width:1050px) {
+.privacy_check {
+  width: 307px;
+  }
+} */
+
+.privacy_check br {
+  display: none;
+}
+
+.privacy_check input {
+  transform: scale(2.0);
+}
+
+.privacy_check label {
+  margin-left: 11px;
+  text-align: left;
+  font: normal normal bold 18px Noto Sans CJK JP, sans-serif;
+  color: #2E2E2E;
+}
+
+.privacy_check_p {
+  text-align: center;
+  margin: 23px auto 74px;
+  font: normal normal normal 14px Noto Sans CJK JP, sans-serif;
+  color: #2E2E2E;
+}
+
+@media (min-width:770px) {
+  .privacy_check label {
+    font-size: 16px
+  }
+  .privacy_check input {
+    transform: scale(1.5);
+  }
+  .privacy_check_p {
+    width: 380px;
+    margin-bottom: 60px;
+  }
+}
+
+@media (min-width:1050px) {
+  .privacy_check label {
+    font-size: 18px;
+  }
+  .privacy_check input {
+    transform: scale(2.0);
+  }
+  .privacy_check_p {
+    width: 100%;
+    margin-bottom: 74px;
+  }
+}
+
+.check_btn_div {
+  text-align: center;
+}
+
+.check_btn {
+  width: 330px;
+  height: 85px;
+  background-color: #3D3D3D;
+  box-shadow: 0px 10px 20px #0000001A;
+  font: normal normal normal 24px Noto Sans CJK JP, sans-serif;
+  letter-spacing: 1.2px;
+  color: #FFFFFF;
+  margin-bottom: 95px;
+}
+
+@media (min-width:770px) {
+  .check_btn {
+    width: 280px;
+    height: 70px;
+    font-size: 20px;
+    margin-bottom: 80px;
+  }
+}
+
+@media (min-width:1050px) {
+  .check_btn {
+    width: 330px;
+    height: 85px;
+    font-size: 24px;
+    margin-bottom: 95px;
   }
 }
