--- a/css/contact.css
+++ b/css/contact.css
@@ -465,8 +465,8 @@
   }
 }
 
-.check_btn_div {
-  text-align: center;
+.submit_check {
+  opacity: 0.7;
 }
 
 .check_btn {
@@ -498,17 +498,29 @@
   }
 }
 
+/*------------------------------------ 確認ページ --------------------------------------*/
+
 .mw_wp_form_confirm .check_btn {
   width: 200px;
   height: 50px;
 }
 
+.check_btn_div {
+  text-align: center;
+}
+
+.mw_wp_form_confirm .check_btn_div {
+  text-align: center;
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 50px auto 0;
+}
+
 @media (min-width:770px) {
   .mw_wp_form_confirm .check_btn_div {
-    display: flex;
     width: 460px;
     justify-content: space-between;
-    margin: auto;
+    flex-direction: row;
   }
   .mw_wp_form_confirm .check_btn {
     width: 200px;
@@ -519,6 +531,7 @@
 @media (min-width:1050px) {
   .mw_wp_form_confirm .check_btn_div {
     width: 780px;
+    margin-top: 80px;
   }
   .mw_wp_form_confirm .check_btn {
     width: 280px;
@@ -526,6 +539,37 @@
   }
 }
 
-.mw_wp_form_confirm .check_btn_div p:first-child{
+.mw_wp_form_confirm .contact_form_items {
+  font: normal normal normal 12px Noto Sans CJK JP, sans-serif;
+}
+
+.mw_wp_form_confirm .contact_form_items {
+  display: flex;
+  align-items: center;
+  margin: 0 20px;
+}
+
+@media (min-width:770px) {
+  .mw_wp_form_confirm .contact_form_items {
+    font-size: 16px;
+  }
+}
+
+.mw_wp_form_confirm .check_btn_div p:first-child, .mw_wp_form_confirm .check_privacy, .mw_wp_form_confirm .check_privacy_content, .mw_wp_form_confirm .privacy_check, .mw_wp_form_confirm .privacy_check_p {
   display: none;
+}
+
+/*------------------------------------ OKページ --------------------------------------*/
+
+.mw_wp_form_complete {
+  font: normal normal normal 14px Noto Sans CJK JP, sans-serif;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+@media (min-width:770px) {
+  .mw_wp_form_complete {
+    font-size: 18px;
+    margin-bottom: 50px;
+  }
 }
