--- a/css/archive.css
+++ b/css/archive.css
@@ -150,7 +150,13 @@
 .page, .extend {
   border: none;
   padding: 0;
-  margin: 0 30px 0 0;
+  margin: 0 24px 0 0;
+}
+
+@media (min-width:420px) {
+  .page, .extend {
+    margin: 0 30px 0 0;
+  }
 }
 
 @media (min-width:770px) {
