--- a/css/index.css
+++ b/css/index.css
@@ -273,6 +273,14 @@ nav.globalMenuSp.active {
   white-space: nowrap;
 }
 
+@media (min-width:500px) {
+  .main h1 {
+    
+    font-size: 18px;
+    
+  }
+}
+
 @media (min-width:770px) {
   .main h1 {
     top: 143px;
@@ -306,6 +314,12 @@ nav.globalMenuSp.active {
   color: #FF5555;
   letter-spacing: 7px;
   white-space: nowrap;
+}
+
+@media (min-width:500px) {
+  .main_mobile h1 {
+    font-size: 18px;
+  }
 }
 
 .top_white {
@@ -545,30 +559,36 @@ nav.globalMenuSp.active {
 .Strengths {
   position: relative;
   width: 100%;
-  height: 1950px;
+  height: 1750px;
   background-color: #E7E7E7;
   text-align: center;
 }
 
 @media (min-width:770px) {
   .Strengths {
-    height: 1600px;
+    height: 1400px;
   }
 }
 
 @media (min-width:1000px) {
   .Strengths {
-    height: 1332px;
+    height: 1225px;
   }
 }
 
 .strengths_main {
   position: absolute;
-  top: 100px;
+  top: 70px;
   left: 0;
   right: 0;
   margin: auto;
   text-align: center;
+}
+
+@media (min-width:530px) {
+  .strengths_main {
+    top: 150px;
+  }
 }
 
 @media (min-width:770px) {
@@ -581,7 +601,7 @@ nav.globalMenuSp.active {
   color: #FF5555;
   font-family: 'Noto Sans JP', sans-serif;
   font-weight: bold;
-  font-size: 28px;
+  font-size: 24px;
   letter-spacing: 8.4px;
   margin-bottom: 19px;
 }
@@ -595,7 +615,7 @@ nav.globalMenuSp.active {
 .strengths_main h3 {
   color: #2E2E2E;
   font-family: 'Noto Sans JP', sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   letter-spacing: 4.4px;
 }
 
@@ -610,11 +630,17 @@ nav.globalMenuSp.active {
 
 .strength_pic {
   position: absolute;
-  top: 250px;
+  top: 210px;
   left: 0;
   right: 0;
   margin: auto;
   text-align: center;
+}
+
+@media (min-width:530px) {
+  .strength_pic {
+    top: 250px;
+  }
 }
 
 @media (min-width:770px) {
@@ -699,7 +725,7 @@ nav.globalMenuSp.active {
 .strength_pic_list2 {
   display: block;
   width: 90%;
-  height: 363px;
+  height: 340px;
   padding-left: 0;
   left: 0;
   right: 0;
@@ -717,7 +743,7 @@ nav.globalMenuSp.active {
   .strength_pic_list2 {
     display: flex;
     width: 662px;
-    height: 363px;
+    height: 340px;
     padding-left: 0;
     left: 0;
     right: 0;
@@ -731,7 +757,7 @@ nav.globalMenuSp.active {
   .strength_pic_list2 {
     display: flex;
     width: 662px;
-    height: 363px;
+    height: 340px;
     padding-left: 0;
     left: 0;
     right: 0;
@@ -786,7 +812,7 @@ nav.globalMenuSp.active {
   padding: 5px 25px 5px 25px;
   font: normal normal bold 16px Noto Sans CJK JP, sans-serif;
   color: #fff;
-  margin: 300px auto 0;
+  margin: 250px auto 0;
   display: block;
   letter-spacing: 0.8px;
   white-space: nowrap;
@@ -795,13 +821,7 @@ nav.globalMenuSp.active {
 
 @media (min-width:770px) {
   .strength_more {
-    margin: 52px auto 0;
-  }
-}
-
-@media (min-width:1000px) {
-  .strength_more {
-    margin: 52px auto 0;
+    margin: 0 auto;
   }
 }
 
@@ -809,7 +829,13 @@ nav.globalMenuSp.active {
 
 .interview_box {
   height: 730px;
-  margin-bottom: 125px;
+  margin-bottom: 100px;
+}
+
+@media (min-width:760px) {
+  .interview_box {
+    margin-bottom: 0px;
+  }
 }
 
 @media (min-width:1000px) {
@@ -823,7 +849,7 @@ nav.globalMenuSp.active {
   padding-top: 84.7px;
   margin-bottom: 13px;
   text-align: center;
-  font: normal normal bold 28px Noto Sans CJK JP, sans-serif;
+  font: normal normal bold 24px Noto Sans CJK JP, sans-serif;
   letter-spacing: 8.4px;
   color: #FF5555;
 }
@@ -842,7 +868,7 @@ nav.globalMenuSp.active {
 .interview_box h2 {
   margin-bottom: 70px;
   text-align: center;
-  font: normal normal bold 22px Noto Sans CJK JP, sans-serif;
+  font: normal normal bold 20px Noto Sans CJK JP, sans-serif;
   letter-spacing: 4.4px;
   color: #2E2E2E;
 }
@@ -850,6 +876,7 @@ nav.globalMenuSp.active {
 @media (min-width:1000px) {
   .interview_box h2 {
     margin-bottom: 98px;
+    font-size: 22px;
   }
 }
 
@@ -989,18 +1016,18 @@ nav.globalMenuSp.active {
   background-color: #0C0C0C;
   color: #FFFFFF;
   width: 100%;
-  height: 1600px;
+  height: 1350px;
 }
 
 @media (min-width:770px) {
   .flow {
-    height: 990px;
+    height: 900px;
   }
 }
 
 @media (min-width:1000px) {
   .flow {
-    height: 757px;
+    height: 700px;
   }
 }
 
@@ -1056,6 +1083,7 @@ nav.globalMenuSp.active {
     display: flex;
     justify-content: center;
     width: 100%;
+    max-width: 1225px;
     flex-wrap: nowrap;
   }
 }
@@ -1085,13 +1113,14 @@ nav.globalMenuSp.active {
 .icon_box {
   width: 125px;
   height: 105px;
-  background-color: #D6D6D6;
   position: relative;
   top: -17px;
   left: 0px;
   right: 0px;
   margin: 0 auto;
   z-index: 5;
+  text-align: center;
+  padding-top: 25px;
 }
 
 @media (min-width:1000px) {
