--- a/css/index.css
+++ b/css/index.css
@@ -1178,14 +1178,13 @@ footer {
   padding-top: 40px;
   display: flex;
   margin: auto;
-  /* text-align: center; */
   flex-wrap: wrap;
   justify-content: center;
 }
 
 @media (min-width:770px) {
   .footer_link {
-    width: 100%;
+    width: 80%;
     padding: 78.36px 10px 0 10px;
     display: flex;
     justify-content: space-between;
@@ -1196,7 +1195,7 @@ footer {
 
 @media (min-width:1185px) {
   .footer_link {
-    width: 1167px;
+    width: 900px;
     padding: 78.36px 0 0 0;
     display: flex;
     justify-content: space-between;
@@ -1213,7 +1212,6 @@ footer {
 
 @media (min-width:770px) {
   .footer_link div {
-    margin-right: 217.5px;
     margin-bottom: 0;
   }
 }
@@ -1222,6 +1220,17 @@ footer {
   .footer_link div {
     margin-right: 310.69px;
     margin-bottom: 0;
+  }
+}
+
+.footer_menu1 div, .footer_menu2 div{
+  margin-right: 0;
+  height: 230px;
+}
+
+@media (min-width:770px) {
+  .footer_menu1 div, .footer_menu2 div{
+    height: 300px;
   }
 }
 
